tests/parser/errors/unions.ray
union Foo {
    a,
    1,
}
union Foo a, b

union Foo {
    a, b,
